# airradar

./: .gitignore  =2.25.0  CONTRIBUTING.md  DEEP_ANALYSIS_SUMMARY.py  ENHANCED_GUI_FEATURES.md  FINAL_STATUS.py  IMPLEMENTATION_REPORT.py  LICENSE  MICRO_INTERACTIONS_COMPLETE.md  README.md  SUCCESS_REPORT.py  SYSTEM_STATUS.py  TEST_SUITE_SUMMARY.md  accessibility.py  accessibility_settings.json  comprehensive_test_suite.py  config.json  config_manager.py  create_screenshots.py  demonstrate_application.py  distance_engine.py  enhanced_themes.py  export_module.py  gui_enhancements.py  install.sh  internationalization.py  main_launcher.py  main_launcher_plugin.py  professional_logic_test.py  pyproject.toml  quick_test.py  realtime_graphs.py  requirements-dev.txt  run_all_tests.py  security_engine.py  setup.cfg  test_backend.py  test_core_features.py  test_core_plugin_system.py  test_enhanced_features.py  (+21 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  REVIEW_STANDARDS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_issue.yml
.github/workflows/: code-quality.yml
core/: __init__.py  plugin_base.py  plugin_manager.py
docs/: MODULAR_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md
docs/man/man1/: airradar.1
plugins/: __init__.py  navigation_enhanced.py  penetration_testing.py
translations/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
translations/templates/: translation_template.json
