[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airradar"
version = "5.0.0"
description = "WiFi Security Radar Suite - Professional WiFi security analysis tools"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "airradar contributors", email = "vinothvbt@users.noreply.github.com"}
]
maintainers = [
    {name = "airradar contributors", email = "vinothvbt@users.noreply.github.com"}
]
keywords = [
    "wifi", "security", "penetration-testing", "radar", "network-analysis",
    "cybersecurity", "wireless", "vulnerability-scanner", "802.11"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration"
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/vinothvbt/airradar"
Repository = "https://github.com/vinothvbt/airradar"
Issues = "https://github.com/vinothvbt/airradar/issues"
Documentation = "https://github.com/vinothvbt/airradar#readme"

[project.scripts]
airradar = "core.main:main"
airradar-gui = "wifi_radar_nav_enhanced:main"
airradar-pentest = "wifi_pentest_radar_modern:WiFiPentestRadarModern"

[project.gui-scripts]
airradar-gui = "wifi_radar_nav_enhanced:main"
airradar-pentest = "wifi_pentest_radar_modern:WiFiPentestRadarModern"

[tool.setuptools]
packages = ["core", "plugins", "translations"]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "*.json",
    "*.qss", 
    "*.css",
    "*.txt",
    "*.md",
    "translations/**/*.json",
    "docs/**/*"
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | old
  | backup
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "old",
    "backup",
    "build",
    "dist"
]
ignore = [
    "E203",
    "W503",
    "E501"
]